fix: import normal and bold monospaced font and add quotes to font families that have whitespace

--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -131,7 +131,7 @@
 	--media-query-max-width-lg: 1199px;
 	
 	--font-family-sans: Quicksand, Arial, sans-serif;
-	--font-family-mono: Roboto Mono, monospace;
+	--font-family-mono: "Roboto Mono", "Courier New", monospace;
 	
 	--font-size-base: 10px;
 	--font-size-xs: 1.1rem;
